--- a/webcache-demo/WebContent/WEB-INF/web.xml
+++ b/webcache-demo/WebContent/WEB-INF/web.xml
@@ -7,6 +7,12 @@
 
   </welcome-file-list>
   
+  <listener>
+	<listener-class>
+             com.demo.listener.MyAppListener 
+        </listener-class>
+   </listener>
+  
   
   <filter>
     <filter-name>RequestLoggingFilter</filter-name>
